# autoresearch

./: .env.example  .gitignore  PROGRESS.md  README.md  _run_pre_strategy_update.py  _tmp_deep_analysis.py  _tmp_stop_filter.py  _tmp_trade_analysis.py  after_baseline.md  analyze_gaps.py  analyze_hypothesis.py  backtest_smt.py  daily.py  data_trend.md  diagnose_bar_resolution.py  direction.md  example-screener.py  harness_upgrade_20260322_1403.md  harness_upgrade_20260323_2249.md  harness_upgrade_20260325_1547.md  hypothesis.py  hypothesis_smt.py  ideas.md  initial_request.md  live_emit.py  plan1-results.tsv  plan1_experiment_runner.py  plan2_experiment_runner.py  plan3_experiment_runner.py  plot_regression.py  portfolio.json  position_monitor.py  prd.md  pre-strategy-update.tsv  prepare.py  prepare_futures.py  prepare_futures_1m.py  program.md  program_smt.md  pyproject.toml  (+19 more)
.agents/: experiment-log.md
automation/: main.py
data/: global.json  ib_realtime.py  sources.py
example_trade_drawings/: draw_trade.py
execution/: pickmytrade.py  protocol.py  simulated.py
orchestrator/: main.py  output.py  process.py  relay.py  scheduler.py  summarizer.py
scripts/: extract_strategy.py  fetch_all_strategies.py
strategies/: __init__.py  base_indicators.py  energy_mar21.py  energy_materials_mar20.py  energy_momentum_v1.py  energy_oos_opt_sep25.py  energy_oos_sep25.py  financials_mar20.py  global_mar24.py  multisector_mar23.py  nasdaq100_mar21.py  price_volume_updates.py  semis_mar20.py  utilities_mar20.py
tests/: conftest.py  smoke_pmt_connection.py  test_analyze_gaps.py  (+48 more)
(+182 files in other folders)
